# TAD_CRM_Agreement_Analayzer

./: .env.example  .gitattributes  .gitignore  CODEX.md  Dockerfile  Makefile  Master Prompt.txt  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_phase1_foundation.py
app/: __init__.py  main.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/llm/: __init__.py  base.py  errors.py  registry.py
app/schemas/: codebook.py  documents.py  llm.py
app/services/: codebook.py
config/codebooks/: active_codebook.yaml  crm_codebook_v1.yaml
config/models/: model_registry.yaml
config/sources/: official_sources.yaml  search_queries.yaml
config/thresholds/: review_thresholds.yaml
docs/: architecture.md  coding_methodology.md  data_model.md  deployment.md  human_review_protocol.md  model_evaluation.md  security.md  team_leader_email_drafts.md  team_leader_one_pager.md
scripts/: evaluate_models.py  export_research_dataset.py  ingest_folder.py  reprocess_document.py  run_discovery.py  seed_codebook.py
streamlit_app/: Home.py  bootstrap.py  runtime_config.py
streamlit_app/pages/: 01_Dashboard.py  02_Agreement_Explorer.py  03_New_Document_Ingestion.py  04_Discovery_Queue.py  05_Coding_Review.py  06_Adjudication.py  07_Comparison_Tool.py  08_Network_Analysis.py  09_Implementation_Tracker.py  10_Ask_the_Database.py  11_Reports_and_Exports.py  12_Admin_and_Codebook.py
tests/unit/: test_adjudication.py  test_agreement_profiles.py  test_ai_coding.py  test_ai_verification.py  (+13 more)
(+27 files in other folders)
