[project]
name = "crm-agreement-intelligence"
version = "0.1.0"
description = "Human-in-the-loop research platform for critical raw materials agreements."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pymupdf>=1.24",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "streamlit>=1.37",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "black>=24.8",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
